[package]
name = "debcargo-vendor"
version = "0.1.0"
authors = [
 "Jacob Greenleaf <jacob@stormforge.xyz>"
 ]
license = "MIT/Apache-2.0"
repository = "https://github.com/stormforge-llc/debcargo-vendor"
description = "Create a Debian package from a Cargo crate using vendoring"
edition = "2021"
rust-version = "1.58"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
cargo = "0.63"
clap = { version = "3", features = ["cargo", "derive"] }
chrono = "0.4"
env_logger = "0.9"
filetime = "0.2"
flate2 = "1"
git2 = "0.14"
glob = "0.3"
itertools = "0.10"
log = "0.4"
regex = "1.0"
semver = "1"
serde = "1"
serde_derive = "1"
tar = "0.4"
textwrap = "0.16"
tempfile = "3"
toml = "0.5"
walkdir = "2"
